Generate a new stub from swagger
