# stub/swagger_server/models/__init__.py
@@ -5,5 +5,6 @@ from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.basin_full import BasinFull
 from swagger_server.models.basin_short import BasinShort
+from swagger_server.models.rainfalls import Rainfalls
 from swagger_server.models.station_full import StationFull
 from swagger_server.models.station_short import StationShort
